--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,55 @@
-.App {
-  text-align: center;
+div[id = 'root'] {
+  width: 100vw;
+  height: 100vh;
+  background-image:linear-gradient(120deg, rgb(122, 212, 237), rgb(245, 214, 250));
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.entire-container {
+  width: 100%;
+  height: 100%;
   display: flex;
+  overflow-y: auto;
   flex-direction: column;
-  align-items: center;
+}
+
+.add-list-btn {
+  box-shadow: 1px 1px 10px gray;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  position: fixed;
+  bottom: 0px;
+  right: 0px;
+  margin: 3%;
+  width: 135px;
+  height: 70px;
+  border-radius: 30px;
   color: white;
+  font-weight: 800;
+  font-size: large;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  background-color: rgb(169, 95, 188);
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+.add-list-btn img {
+  width: 20px;
+  height: 20px;
+  margin: 3px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.add-list-btn:hover {
+  background-color: rgb(194, 148, 205);;
+}
+
+.add-list-btn:active {
+  background-color: rgb(104, 30, 123);;
+}
+
+.itemLists-container {
+  padding: 3%;
+  flex-grow: 1;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  gap: 1%;
 }
